--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,12 +11,28 @@
     <div class='gamesList'>
         <% games.forEach(game => { %>
       
-      <p>  
-      <%= game.name  %>
-      </p>
+    <div class="card mb-3" style="max-width: 540px;">
+  <div class="row g-0">
+    <div class="col-md-3">
+      <img src="..." class="img-fluid rounded-start" alt="...">
+    </div>
+    <div class="col-md-6">
+      <div class="card-body">
+        <h5 class="card-title"> <%= game.name %></h5>
+        <!-- <p class="card-text"><%= game.description %></p> -->
+        <p class="card-text"><small class="text-muted"> <%= game.date %>o</small></p>
+      </div>
+    </div>
+     <div class="col-md-3">
+ <h5 class="card-title"> <%= game.highscore %></h5>
+     </div>
+  </div>
+</div>
+
+
+
       <% }) %>
       </div>
-
 
 
    
