--- a/views/includes/header.ejs
+++ b/views/includes/header.ejs
@@ -7,7 +7,9 @@
     <link rel='stylesheet' href='/stylesheets/style.css' />
    
     <div class='d-flex align-items-center flex-column headerMain'>
-        <h1><%= title %></h1>
+        <a class="text-logo" href="/">
+          <h1 ><%= title %></h1>
+        </a>
         
         <form action='search'>
           <input type='serach' name='q' action='search'>
