--- a/views/admin/games/new.ejs
+++ b/views/admin/games/new.ejs
@@ -1,28 +1,56 @@
 <!DOCTYPE html>
-<html>
-  <%- include('../includes/header.ejs'); %>
-  
- <body>
-    <%- include('../includes/sidebar.ejs'); %>
-    <h1>New Game</h1>
-    <form method="POST">
-        <div class="mb-3">
-          <label for="name" class="form-label">Name</label>
-          <input type="text" class="form-control" id="name" name="name">
-        </div>
-        <div class="mb-3">
-            <label for="description" class="form-label">Description</label>
-            <textarea class="form-control" id="description" name="description"></textarea>
-        </div>
-        <div class="mb-3">
-            <label for="genre" class="form-label">Genre</label>
-            <textarea class="form-control" id="genre" name="genre"></textarea>
-        </div>
-        <div class="mb-3">
-            <label for="imageUrl" class="form-label">Image URL</label>
-            <input type="text" class="form-control" id="imageurl" name="imageurl">
-        </div>
-        <button type="submit" class="btn btn-primary">Add</button>
-      </form>
-</body>
+<html lang="en">
+  <%- include('../includes/header.ejs') %>
+  <body>
+    <%- include('../includes/navbar.ejs') %>
+
+    <div id="layoutSidenav">
+      <%- include('../includes/sidebar.ejs') %>
+      <div id="layoutSidenav_content">
+        <main>
+          <div class="container-fluid px-4">
+            <h1 class="mt-4">Nytt spel</h1>
+
+            <!-- content -->
+            <form method="POST">
+              <div class="mb-3">
+                <label for="name" class="form-label">Name</label>
+                <input type="text" class="form-control" id="name" name="name" />
+              </div>
+              <div class="mb-3">
+                <label for="description" class="form-label">Description</label>
+                <textarea
+                  class="form-control"
+                  id="description"
+                  name="description"
+                ></textarea>
+              </div>
+              <div class="mb-3">
+                <label for="genre" class="form-label">Genre</label>
+                <textarea
+                  class="form-control"
+                  id="genre"
+                  name="genre"
+                ></textarea>
+              </div>
+              <div class="mb-3">
+                <label for="imageUrl" class="form-label">Image URL</label>
+                <input
+                  type="text"
+                  class="form-control"
+                  id="imageurl"
+                  name="imageurl"
+                />
+              </div>
+              <button type="submit" class="btn btn-primary">Add</button>
+            </form>
+
+            <!-- content end-->
+          </div>
+        </main>
+
+        <%- include('../includes/footer.ejs') %>
+      </div>
+    </div>
+  </body>
 </html>
