--- a/views/admin/includes/header.ejs
+++ b/views/admin/includes/header.ejs
@@ -1,17 +1,17 @@
-<head class = 'header'>
+<head>
+  <meta charset="utf-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta
+    name="viewport"
+    content="width=device-width, initial-scale=1, shrink-to-fit=no"
+  />
+  <meta name="description" content="" />
+  <meta name="author" content="" />
+  <title>Static Navigation - SB Admin</title>
+  <link rel="stylesheet" href="/stylesheets/admin_style.css" />
 
-   
-   
-    <title><%= title %></title>
-   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-   
-    <div class='d-flex headerMainAdmin'>
-        <a class="text-logo" href="/">
-          <h1 ><%= title %></h1>
-        </a>
-        
-       
-        </div>
-
+  <script
+    src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/js/all.min.js"
+    crossorigin="anonymous"
+  ></script>
 </head>
