--- a/views/admin/includes/sidebar.ejs
+++ b/views/admin/includes/sidebar.ejs
@@ -1,44 +1,41 @@
-
-    <!-- Sidebar -->
-    <nav id="sidebar">
-      
-
-        <ul class="list-unstyled components">
-            <p>Dummy Heading</p>
-           
-               
-                    <li>
-                        <a href="#">Home 1</a>
-                    </li>
-                    <li>
-                        <a href="#">Home 2</a>
-                    </li>
-                 
-                </ul>
-            </li>
-            
-                <a href="#">About</a>
-            </li>
-            <li>
-                <a href="#pageSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Pages</a>
-                <ul class="collapse list-unstyled" id="pageSubmenu">
-                    <li>
-                        <a href="#">Page 1</a>
-                    </li>
-                    <li>
-                        <a href="#">Page 2</a>
-                    </li>
-                    <li>
-                        <a href="#">Page 3</a>
-                    </li>
-                </ul>
-            </li>
-            <li>
-                <a href="#">Portfolio</a>
-            </li>
-            <li>
-                <a href="#">Contact</a>
-            </li>
-        </ul>
-    </nav>
-
+<div id="layoutSidenav_nav">
+  <nav class="sb-sidenav accordion sb-sidenav-dark" id="sidenavAccordion">
+    <div class="sb-sidenav-menu">
+      <div class="nav">
+        <div class="sb-sidenav-menu-heading">spel</div>
+        <a class="nav-link" href="/admin/games/list">
+          <div class="sb-nav-link-icon">
+            <i class="fas fa-table"></i>
+          </div>
+          Lista spel
+        </a>
+        <a class="nav-link" href="/admin/games/new">
+          <div class="sb-nav-link-icon"><i class="fas fa-plus"></i></div>
+          Lägg till spel
+        </a>
+        <div class="sb-sidenav-menu-heading">Spelare</div>
+        <a class="nav-link" href="/admin/players/list">
+          <div class="sb-nav-link-icon">
+            <i class="fas fa-table"></i>
+          </div>
+          Lista spelare
+        </a>
+        <a class="nav-link" href="/admin/players/new">
+          <div class="sb-nav-link-icon"><i class="fas fa-plus"></i></div>
+          Lägg till spelare
+        </a>
+        <div class="sb-sidenav-menu-heading">Highscores</div>
+        <a class="nav-link" href="/admin/highscores/list">
+          <div class="sb-nav-link-icon">
+            <i class="fas fa-table"></i>
+          </div>
+          Lista highscores
+        </a>
+        <a class="nav-link" href="/admin/highscores/new">
+          <div class="sb-nav-link-icon"><i class="fas fa-plus"></i></div>
+          Lägg till highscore
+        </a>
+      </div>
+    </div>
+  </nav>
+</div>
