--- a/views/admin/games/edit.ejs
+++ b/views/admin/games/edit.ejs
@@ -1,32 +1,66 @@
+<!DOCTYPE html>
+<html lang="en">
+  <%- include('../includes/header.ejs') %>
+  <body>
+    <%- include('../includes/navbar.ejs') %>
 
-  <!DOCTYPE html>
-  <html>
-    <%- include('../includes/header.ejs'); %>
-   <body>
-    <%- include('../includes/sidebar.ejs'); %>
-    <h1>New Game</h1>
-    <form method="POST">
-        <input type="hidden" name="id" value="<%= game.id %>">
-        <div class="mb-3">
-          <label for="name" class="form-label">Name</label>
-          <input type="text" class="form-control" id="name" name="name" value="<%= game.name %>">
-        </div>
-        <div class="mb-3">
-            <label for="description" class="form-label">Description</label>
-            <textarea class="form-control" id="description" name="description"><%= game.description %></textarea>
-        </div>
-        <div class="mb-3">
-            <label for="genre" class="form-label">Genre</label>
-            <textarea class="form-control" id="genre" name="genre" ><%= game.genre %></textarea>
-        </div>
-        <div class="mb-3">
-            <label for="imageUrl" class="form-label">Image URL</label>
-            <input type="text" class="form-control" id="imageurl" name="imageurl" value="<%= game.imageurl %>">
-        </div>
-        <button type="submit" class="btn btn-primary">Uppdatera</button>
-        <a class="button" href="/admin/games/delete/<%= game.id %>">Ta bort</a>
+    <div id="layoutSidenav">
+      <%- include('../includes/sidebar.ejs') %>
+      <div id="layoutSidenav_content">
+        <main>
+          <div class="container-fluid px-4">
+            <h1 class="mt-4">Editera spel</h1>
 
-       
-      </form>
-</body>
+            <!-- content -->
+            <form method="POST">
+              <input type="hidden" name="id" value="<%= game.id %>" />
+              <div class="mb-3">
+                <label for="name" class="form-label">Name</label>
+                <input
+                  type="text"
+                  class="form-control"
+                  id="name"
+                  name="name"
+                  value="<%= game.name %>"
+                />
+              </div>
+              <div class="mb-3">
+                <label for="description" class="form-label">Description</label>
+                <textarea
+                  class="form-control"
+                  id="description"
+                  name="description"
+                >
+<%= game.description %></textarea
+                >
+              </div>
+              <div class="mb-3">
+                <label for="genre" class="form-label">Genre</label>
+                <textarea class="form-control" id="genre" name="genre">
+<%= game.genre %></textarea
+                >
+              </div>
+              <div class="mb-3">
+                <label for="imageUrl" class="form-label">Image URL</label>
+                <input
+                  type="text"
+                  class="form-control"
+                  id="imageurl"
+                  name="imageurl"
+                  value="<%= game.imageurl %>"
+                />
+              </div>
+              <button type="submit" class="btn btn-primary">Uppdatera</button>
+              <a class="button" href="/admin/games/delete/<%= game.id %>"
+                >Ta bort</a
+              >
+            </form>
+            <!-- content end-->
+          </div>
+        </main>
+
+        <%- include('../includes/footer.ejs') %>
+      </div>
+    </div>
+  </body>
 </html>
