--- a/views/admin/highscores/list.ejs
+++ b/views/admin/highscores/list.ejs
@@ -12,7 +12,7 @@
             <a
               style="height: 45px"
               class="button float-end"
-              href="/admin/players/new"
+              href="/admin/highscores/new"
               >Lägg till ny</a
             >
             <h1 class="mt-4">Lista över highscores</h1>
