--- a/views/includes/header.ejs
+++ b/views/includes/header.ejs
@@ -1,20 +1,19 @@
-<head class = 'header'>
+<head class="header">
+  <title><%= title %></title>
+  <link
+    rel="stylesheet"
+    href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+  />
+  <link rel="stylesheet" href="/stylesheets/style.css" />
 
-   
-   
-    <title><%= title %></title>
-   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-   
-    <div class='d-flex align-items-center flex-column headerMain'>
-        <a class="text-logo" href="/">
-          <h1 ><%= title %></h1>
-        </a>
-        
-        <form action='search'>
-          <input type='serach' name='q' action='search'>
-          <button type="submit" class="btn btn-primary">Sök</button>
-          </form>
-        </div>
+  <div class="d-flex align-items-center flex-column headerMain">
+    <a class="text-logo" href="/">
+      <h1><%= title %></h1>
+    </a>
 
+    <form action="search">
+      <input type="serach" name="q" action="search" />
+      <button type="submit" class="btn btn-primary">Sök</button>
+    </form>
+  </div>
 </head>
