--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,44 +1,46 @@
 <!DOCTYPE html>
 <html>
-  <%- include('includes/header.ejs'); %>
-  
   <body>
-    <div class='container '>
-   
-   
-    <div class='gamesList'>
-        <% games.forEach(game => {  
-          console.log(game) %>
+    <%- include('includes/header.ejs'); %>
+    <div class="container">
+      <div class="gamesList">
+        <% games.forEach(game => { console.log(game) %>
 
-    
-      
-    <div class="card mb-3" style="max-width: 100%;">
-      <a href="games/<%= game.url_slug %>">
-  <div class="row g-0">
-    <div class="col-md-3">
-      <img src="<%= game.imageurl %>" class="img-fluid rounded-start" alt="...">
-    </div>
-    <div class="col-md-6">
-      <div class="card-body">
-        <h5 class="card-title index-card"> <%= game.name %></h5>
-        <!-- <p class="card-text"><%= game.description %></p> -->
-        <p class="card-text"><small class="text-muted"> <% if(typeof game.Players[0] != 'undefined'){ %>  <%=   game.Players[0].firstname %> <%=  game.Players[0].surname %> - <%= game.Players[0].HighScores.date %> <% } %> </small></p>
+        <div class="card mb-3" style="max-width: 100%">
+          <a href="games/<%= game.url_slug %>">
+            <div class="row g-0">
+              <div class="col-md-3">
+                <img
+                  src="<%= game.imageurl %>"
+                  class="img-fluid rounded-start"
+                  alt="..."
+                />
+              </div>
+              <div class="col-md-6">
+                <div class="card-body">
+                  <h5 class="card-title index-card"><%= game.name %></h5>
+                  <!-- <p class="card-text"><%= game.description %></p> -->
+                  <p class="card-text">
+                    <small class="text-muted">
+                      <% if(typeof game.Players[0] != 'undefined'){ %> <%=
+                      game.Players[0].firstname %> <%= game.Players[0].surname
+                      %> - <%= game.Players[0].HighScores.date %> <% } %>
+                    </small>
+                  </p>
+                </div>
+              </div>
+              <div class="col-md-3">
+                <h5 class="card-point">
+                  <% if(typeof game.Players[0] != 'undefined'){ %> <%=
+                  game.Players[0].HighScores.points %> <% } %>
+                </h5>
+              </div>
+            </div>
+          </a>
+        </div>
+
+        <% }) %>
       </div>
     </div>
-     <div class="col-md-3">
- <h5 class="card-point"><% if(typeof game.Players[0] != 'undefined'){ %> <%=  game.Players[0].HighScores.points  %> <% } %></h5>
-     </div>
-  </div>
-</a>
-</div>
-
-
-
-      <% }) %>
-      </div>
-
-
-    </div>   
-
   </body>
 </html>
