--- a/views/admin/games/list.ejs
+++ b/views/admin/games/list.ejs
@@ -9,6 +9,12 @@
       <div id="layoutSidenav_content">
         <main>
           <div class="container-fluid px-4">
+            <a
+              style="height: 45px"
+              class="button float-end"
+              href="/admin/games/new"
+              >Lägg till ny</a
+            >
             <h1 class="mt-4">Lista över spel</h1>
 
             <!-- content -->
