--- a/views/search.ejs
+++ b/views/search.ejs
@@ -14,7 +14,7 @@
             <div class="row g-0">
               <div class="col-md-3">
                 <img
-                  src="<%= game.imageurl %>"
+                  src="<%= game.image_url %>"
                   class="img-fluid rounded-start"
                   alt="..."
                 />
@@ -25,17 +25,15 @@
                   <!-- <p class="card-text"><%= game.description %></p> -->
                   <p class="card-text">
                     <small class="text-muted">
-                      <%= game.Players[0].firstname %> <%=
-                      game.Players[0].surname %> - <%=
-                      game.Players[0].HighScores.date %></small
+                      <%= game.highestscore.player.firstname %> <%=
+                      game.highestscore.player.surname %> - <%=
+                      game.highestscore.date %></small
                     >
                   </p>
                 </div>
               </div>
               <div class="col-md-3">
-                <h5 class="card-point">
-                  <%= game.Players[0].HighScores.points %>
-                </h5>
+                <h5 class="card-point"><%= game.highestscore.points %></h5>
               </div>
             </div>
           </a>
