--- a/views/games/view.ejs
+++ b/views/games/view.ejs
@@ -6,24 +6,25 @@
     <div class="container">
       <div class="row game_display_row">
         <div class="col-md-6">
-          <img class="view_img" src="<%= gameScores[0].imageurl %>" />
+          <img class="view_img" src="<%= game.image_url %>" />
         </div>
         <div class="col-md-6">
-          <h1><%= gameScores[0].game %></h1>
-          <p><%= gameScores[0].description %></p>
+          <h1><%= game.name %></h1>
+          <p><%= game.description %></p>
         </div>
       </div>
 
       <h2 class="text-center">High Scores</h2>
       <div class="playerList">
-        <% gameScores.forEach(score => { %>
+        <% highscores.forEach(score => { %>
 
         <div class="card mb-3" style="max-width: 100%">
           <div class="row g-0">
             <div class="col-md-9">
               <div class="card-body">
                 <h5 class="card-title">
-                  <%= score.firstname %> <%= score.surname %>, <%= score.date %>
+                  <%= score.player.firstname %> <%= score.player.surname %>, <%=
+                  score.date %>
                 </h5>
               </div>
             </div>
