--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -3,7 +3,7 @@
     <h1>High Scores</h1>
   </a>
 
-  <form action="search">
+  <form action="/search">
     <input type="serach" name="q" action="search" />
     <button type="submit" class="btn btn-primary">Sök</button>
   </form>
